test/neg/neg-rpc_ff7.errc
function object provided to rpc_ff cannot be invoked on the given arguments as rvalue references
